@@ -37,12 +37,6 @@ enum { VERSION =  109 };
 
 
 #define strcasecmp strcmpi // FS
-#define I_NOUPDATE      0
-#define I_FULLVIEW      1
-#define I_STATBAR       2
-#define I_MESSAGES      4
-#define I_FULLSCRN      8
-#define SBARHEIGHT      32
 
 // Game mode handling - identify IWAD version
 //  to handle IWAD dependend animations etc.
@@ -85,22 +79,6 @@ typedef enum
 // most parameter validation debugging code will not be compiled
 #define RANGECHECK
 
-// Do or do not use external soundserver.
-// The sndserver binary to be run separately
-//  has been introduced by Dave Taylor.
-// The integrated sound support is experimental,
-//  and unfinished. Default is synchronous.
-// Experimental asynchronous timer based is
-//  handled by SNDINTR. 
-//#define SNDSERV  1
-//#define SNDINTR  1
-
-
-// This one switches between MIT SHM (no proper mouse)
-// and XFree86 DGA (mickey sampling). The original
-// linuxdoom used SHM, which is default.
-//#define X11_DGA		1
-
 
 //
 // For resize of screen, at start of game.
@@ -118,6 +96,8 @@ typedef enum
 // Defines suck. C sucks.
 // C++ might sucks for OOP, but it sure is a better C.
 // So there.
+// FS: You suck, your code sucks, you're fired.
+
 #define SCREENWIDTH  320
 //SCREEN_MUL*BASE_WIDTH //320
 #define SCREENHEIGHT 200
@@ -331,15 +311,6 @@ typedef enum
 // PLAY
 //#include "p_tick.h"
 
-
-
-
-// Header, generated by sound utility.
-// The utility was written by Dave Taylor.
-//#include "sounds.h"
-
-void tprintf (char *string, int initflag); // FS
-extern  int     UpdateState; // FS
 
 //#ifdef __WATCOMC__
 //extern boolean useexterndriver;
